# food-cli

./: .gitignore  README.md  main.py  pyproject.toml
