[project]
name = "food-cli"
version = "0.1.0"
description = "Command-line food and calorie tracker using USDA FoodData Central API"
authors = [
    { name = "Fergus Fettes" }
]
license = { text = "MIT" }
requires-python = ">=3.13"
keywords = ["food", "calories", "nutrition", "usda", "cli", "tracker"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.32.0",
    "rich>=14.2.0",
    "typer>=0.19.2",
]

[project.scripts]
food = "main:app"

[project.urls]
Homepage = "https://github.com/fergusfettes/food-cli"
Repository = "https://github.com/fergusfettes/food-cli"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.uv]
package = true
